--- a/main.html
+++ b/main.html
@@ -13,25 +13,25 @@
 			<td>
 				<table align="center">
 					<thead>
-						<th colspan="4">Nested Table 1</th>
+						<th colspan="2">Nested Table 2</th>
 					</thead>
 					<tbody>
 						<tr>
-							<th colspan="2">Column 1</th>
-							<th colspan="2">Column 2</th>
+							<th >Column 1</th>
+							<th >Column 2</th>
 						</tr>
 						<tr>
-							<td colspan="2">abc</td>
-							<td colspan="2">abc</td>
+							<td >abc</td>
+							<td >abc</td>
 						</tr>
 						
 					</tbody>
 				</table>
 			</td>
 			<td>
-				<table align="center">
+				<table >
 					<thead>
-						<th >Nested Table 2</th>
+						<th >Nested Table 1</th>
 					</thead>
 					<tbody>
 						<tr>
@@ -49,22 +49,23 @@
 		</tr>
 		<tr>
 			<td>
-				<table align="center">
+				<table >
 					<thead>
-						<th colspan="4">Nested Table 3</th>
+						<th colspan="2">Nested Table 3</th>
 					</thead>
 					<tbody>
 						<tr>
-							<td colspan="2"><a href="#">Nested Table</a></td>
-							<td colspan="2">Demo Continued</td>
+							<td ><a href="#">Nested Table</a></td>
+							<td >Demo Continued</td>
 						</tr>
 						
 					</tbody>
 				</table>
 			</td>
 			<td>
-				<table align="center">
-					<tr><th colspan="4">
+				<table >
+					<tr>
+						<th>
 						Nested table 4
 					</th>
 					</tr>
