--- a/main.html
+++ b/main.html
@@ -64,18 +64,12 @@
 			</td>
 			<td>
 				<table >
-					<tr>
-						<th>
-						Nested table 4
-					</th>
-					</tr>
-					<tr style="background-color:black; color:white">
-						<th colspan="4">
-							HTML
-						</th>
-					</tr>
-					
-					
+					<thead>
+						<th>Nested Table 4</th>
+					</thead>
+					<tbody>
+						<th style="background-color:black; color:white">HTML</th>
+					</tbody>
 				</table>
 			</td>
 		</tr>
